@@ -1,12 +1,10 @@
 package com.civica.splitthebill.infraestructure.adapter.in.rest.mapper;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
 import org.springframework.stereotype.Component;
 import com.civica.splitthebill.infraestructure.adapter.out.persistence.entity.UserEntity;
 import com.civica.splitthebill.domain.model.Group;
-import com.civica.splitthebill.domain.model.User;
+import com.civica.splitthebill.infraestructure.adapter.out.persistence.entity.ExpenseEntity;
 import com.civica.splitthebill.infraestructure.adapter.out.persistence.entity.GroupEntity;
 
 @Component
@@ -17,25 +15,24 @@ public final class GroupMapper {
 
     public static Group entitytoDomain(GroupEntity groupEntity) {
 
-        List<User> members = groupEntity.getMembers().stream()
-                .map(userEntity -> new User(userEntity.getId(), userEntity.getName()))
-                .collect(Collectors.toList());
+        List<Long> membersIds = groupEntity.getMembers().stream()
+                .map((UserEntity u) -> u.getId())
+                .toList();
 
-        Group group = new Group(groupEntity.getId(), groupEntity.getName(), members);
+        List<Long> expenseIds = groupEntity.getExpenses().stream()
+                .map(ExpenseEntity::getId)
+                .toList();
         
-        return group;
+        return new Group(groupEntity.getId(), groupEntity.getName(), membersIds, expenseIds);
     }
 
-    public static GroupEntity domaintoEntity(Group group) {
+    public static GroupEntity domaintoEntity(Group group, List<UserEntity> members, List<ExpenseEntity> expenses) {
 
         GroupEntity groupEntity = new GroupEntity();
         groupEntity.setId(group.id());
         groupEntity.setName(group.name());
-
-        List<UserEntity> memberEntities = group.members().stream()
-                .map(user -> new UserEntity(user.id(), user.name()))
-                .collect(Collectors.toList());
-        groupEntity.setMembers(memberEntities);
+        groupEntity.setMembers(members);
+        groupEntity.setExpenses(expenses);
 
         return groupEntity;
     }
